objects/ssot__DonorGiftSummary__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AverageGiftAmount__c</fullName>
        <label>Average Gift Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__BestGiftYear__c</fullName>
        <label>Best Gift Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CurrentRecurringStartDate__c</fullName>
        <label>Current Recurring Gift Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CurrentYearGiftCount__c</fullName>
        <label>Current Year Gift Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DaysSinceLastGift__c</fullName>
        <label>Days Since Last Gift</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DonorId__c</fullName>
        <label>Donor</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FirstGiftAmount__c</fullName>
        <label>First Gift Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__FirstGiftCampaignId__c</fullName>
        <label>First Gift Campaign</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FirstGiftDate__c</fullName>
        <label>First Gift Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__FirstRecurringStartDate__c</fullName>
        <label>First Recurring Gift Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__FirstSoftCreditAmount__c</fullName>
        <label>First Soft Credit Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__FirstSoftCreditDate__c</fullName>
        <label>First Soft Credit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__GiftCount__c</fullName>
        <label>Gift Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__GiftsLastYearAmount__c</fullName>
        <label>Gifts Last Year Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__GiftsThisYearAmount__c</fullName>
        <label>Gifts This Year Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__GiftsTwoYearsAgoAmount__c</fullName>
        <label>Gifts Two Years Ago Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__GivingLevel__c</fullName>
        <label>Giving Level</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HighestGiftAmount__c</fullName>
        <label>Highest Gift Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__HighestGiftYearAmount__c</fullName>
        <label>Highest Gift Year Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__HighestSoftCreditAmount__c</fullName>
        <label>Highest Soft Credit Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__HighestSoftCreditDate__c</fullName>
        <label>Highest Soft Credit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Donor Gift Summary Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastGiftAmount__c</fullName>
        <label>Last Gift Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__LastGiftDate__c</fullName>
        <label>Last Gift Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LastRecurringPaymentDate__c</fullName>
        <label>Last Recurring Gift Payment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LastSoftCreditAmount__c</fullName>
        <label>Last Soft Credit Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__LastSoftCreditDate__c</fullName>
        <label>Last Soft Credit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LastTwoYearGiftCount__c</fullName>
        <label>Last Two Year Gift Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__LastYearGiftCount__c</fullName>
        <label>Last Year Gift Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__LowestGiftAmount__c</fullName>
        <label>Lowest Gift Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SecondGiftDate__c</fullName>
        <label>Second Gift Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__SoftCreditCount__c</fullName>
        <label>Soft Credit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalGiftsAmount__c</fullName>
        <label>Total Gifts Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalHardSoftCreditsAmount__c</fullName>
        <label>Total Hard and Soft Credits Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalHardSoftCredits__c</fullName>
        <label>Total Hard and Soft Credits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalPaidRcrInstallments__c</fullName>
        <label>Total Paid Recurring Installments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalPaidRcrInstlAmt__c</fullName>
        <label>Total Paid Recurring Installments Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761238092_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DonorGiftSummary_DonorId_map_Account_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>DonorGiftSummary_DonorId_map_Account_rel</relationshipLabel>
        <relationshipName>rel_1697761238092_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761238167_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DonorGiftSummary_FirstGiftCampaignId_rel</label>
        <referenceTo>ssot__Campaign__dlm</referenceTo>
        <relationshipLabel>DonorGiftSummary_FirstGiftCampaignId_rel</relationshipLabel>
        <relationshipName>rel_1697761238167_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>